Sat Mar 08 13:44:44 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c: remove a warning

Fri Mar 07 17:44:28 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- put some functions static

Fri Mar 07 16:57:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/dblib/dblib.c:
	- remove some warnings

Fri Mar 07 16:41:04 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/t0006.c: update

Fri Mar 07 16:02:09 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/sybdb.h include/tds.h src/dblib/dblib.c:
	* src/dblib/unittests/t0004.c src/dblib/unittests/t0005.c:
	* src/tds/token.c:
	- Bill Thompson patch
	- 1) implementation of dbrecftos() in dblibrary as per the 
	- Sybase open client equivalent 
	-
	- 2) fixes for dbresults processing, which was in some 
	- (rather obscure) circumstances not behaving exactly like 
	- the Sybase open client equivalent. 
	-
	- 3) reworking of previous patch in respect to dbcancel 
	- (removed the code previously added to this function), 
	- and the discarding of unprocessed result data in 
	- circumstances where all the data had been fetched.
	-
	- 4) modification of dblib/unittests/t0004.c and t0005.c to 
	- reflect and test the above changes. 


Fri Mar 07 15:18:41 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: check for tds7+, reindent

Fri Mar 07 15:09:28 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c:
	- partial and untested support for parameters in query

Thu Mar 06 23:12:43 EST 2003  Mark Lilback <mark@lilback.com>
	* src/ctlib/cs.c: cs_convert no longer requires destlen for fixed-len types

Thu Mar 06 18:44:11 EST 2003  Mark Lilback <mark@lilback.com>
	* include/cspublic.h:
	* include/tds.h:
	* src/apps/tsql.c:
	* src/ctlib/ct.c:
	* src/ctlib/unittests/Makefile.am:
	* src/ctlib/unittests/lang_ct_param.c (added):
	* src/dblib/bcp.c:
	* src/dblib/dblib.c:
	* src/odbc/odbc.c: